change jobtitle to job id in search functionality